<resources>
    <string name="app_name">Covoiturage</string>
    <string name="title_home">Home</string>
    <string name="title_proposer_trajet">Proposer un trajet</string>
    <string name="title_rechercher_trajet">Rechercher un trajet</string>
    <string name="title_mes_trajets_passager">Mes trajets à aller</string>
    <string name="title_mes_trajets_conducteur">Mes trajets à conduire</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="students_locations">
        <item>Marie Curie</item>
        <item>Descartes</item>
        <item>Rabelais</item>
        <item>Centre ville</item>
        <item>Futuroscope</item>
    </string-array>


</resources>
